# devbox

./: .gitignore  BUILD-INSTRUCTIONS.md  CLAUDE.md  README.md  docker-compose.yml  mise.toml
backend/: pyproject.toml
backend/app/: auth.py  config.py  database.py  main.py
backend/app/middleware/: cors.py  tracing.py
backend/app/models/: __init__.py  base.py  case_file.py  message.py  prediction.py  project.py  rep.py  request_trace.py  round.py  slot_impl.py  trace.py  user.py
backend/app/routers/: agent_floor.py  auth.py  cases.py  mechanic.py  messages.py  meta.py  predictions.py  projects.py  reps.py  rounds.py  slots.py  traces.py  wager.py  workbench.py  workshop_http.py  workshop_types.py
backend/app/schemas/: __init__.py  errors.py  message.py  prediction.py  project.py  request_trace.py  trace.py  user.py
backend/app/services/: agent_floor.py  assertions.py  cases.py  embeddings.py  faults.py  lab_runner.py  mechanic.py  mechanic_prompts.py  mechanic_tools.py  model_client.py  plan_parser.py  predictions.py  reps.py  rounds.py  slots.py  trace_store.py  vector_store.py  world_seeder.py
backend/lab/: seed.sql
backend/scripts/: smoke.py
backend/tests/: test_agent_floor.py  test_assertions.py  test_cases.py  test_gym.py  test_mechanic.py  test_plan_parser.py  test_predictions.py  test_rounds.py  test_trace_schema.py  test_verdict_guard.py
docs/design/: autonomous-build-spec.md  one-glass-box.md
frontend/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: app.css  root.tsx  routes.ts
frontend/app/lib/: api.ts
(+26 files in other folders)
